--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -63,6 +63,7 @@ body .logoCommerce img{
     display: flex;
     align-items: center;
     border-style: solid;
+    border-width: 7px;
     border-radius: 20px;
     padding: 5px 12px;
     border-color: #8464ab;
@@ -71,8 +72,8 @@ body .logoCommerce img{
 .navBar-Derecha .cantidadProductos{
 position: absolute;
 border-style: solid;
-margin-left: 50px;
-margin-top: 40px;
+margin-left: 45px;
+margin-top: 37px;
 padding: 2px 4px;
 background-color: #8464ab;
 border-radius: 40px;
