--- a/src/styles/ItemListContainer.css
+++ b/src/styles/ItemListContainer.css
@@ -26,11 +26,12 @@ body{
   align-items: center;
   text-align: center;
 }
-.productInformation h2{
+.productInformation .nameProduct{
   color: #ecd7fe;
   font-family: "Jersey 25", sans-serif;
     font-family: "Jersey 25", sans-serif;
   font-weight: 700;
+  font-size: 24px  ;
   font-style: normal;
 }
 .productInformation p{
