Agregado de loading

--- a/src/styles/ItemListContainer.css
+++ b/src/styles/ItemListContainer.css
@@ -18,6 +18,7 @@ body{
   flex-direction: column;
   border-radius: 30px;
   margin: 50px;
+  padding-top: 20px;
 }
 .productInformation{
   display: flex;
@@ -57,3 +58,5 @@ body{
   justify-content: center;
   align-items: center;
 }
+.mainBody .loadingList{
+margin-top: 200px;}
